# mcc

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: number.cpp
test/: test_number.cpp
thrdparty/lib/gtest/: libgtest.so.1.12.1
